# EasyMVS

./: .gitignore  CMakeLists.txt  CNAME  _a_d_c_wrapper_8h_source.html  _a_d_census_stereo_8h_source.html  _bundle_pose_optimizer_8h_source.html  _c_v_hik_camera_8h_source.html  _camera_object_8h_source.html  _census_s_g_m_wrapper_8h_source.html  _configuration_object_8h_source.html  _data_flow_object_8h_source.html  _dense_filter_8h_source.html  _dense_map_object_8h_source.html  _dense_optimizer_8h_source.html  _dense_reconstructor_8h_source.html  _dual_frame_reconstructor_8h_source.html  _dual_photographer_8h_source.html  _f_sift128_8h_source.html  _feature_extractor_8h_source.html  _feature_matcher_8h_source.html  _frame_object_8h_source.html  _global_map_object_8h_source.html  _image_reader_camera_8h_source.html  _json_saver_8hpp_source.html  _m_v_s_config_8h_source.html  _m_v_s_object_8h_source.html  _map_point_object_8h_source.html  _optimal_frame_finder_8h_source.html  _p_m_s_wrapper_8h_source.html  _patch_match_stereo_8h_source.html  _photographer_8h_source.html  _pinhole_pose_reconstructor_8h_source.html  _pose_optimizer_8h_source.html  _pose_reconstructor_8h_source.html  _semi_global_matching_8h_source.html  _voc_tree_matcher_8h_source.html  _work_flow_object_8h_source.html  adcensus__types_8h_source.html  adcensus__util_8h_source.html  annotated.html  (+363 more)
Src/: DenseReconstruction.sln
Src/DenseReconstruction/: BasicData.cpp  BasicData.h  CoordinateConvertParams.cpp  CoordinateConvertParams.h  Coordinate_P.cpp  Coordinate_P.h  Coordinate_PointTypes.h  Coordinate_Q.cpp  Coordinate_Q.h  Coordinate_X.cpp  Coordinate_X.h  DenseReconstruction.cpp  DenseReconstruction.h  DenseReconstruction.qrc  DenseReconstruction.ui  DenseReconstruction.vcxproj  DenseReconstruction.vcxproj.filters  GreenIntegralImage.cpp  GreenIntegralImage.h  main.cpp
app/: CMakeLists.txt
app/PictureInputMVS/: CMakeLists.txt  main.cpp
app/PictureInputSFM/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui  QPointCloudViewer.h  ScrollScale.h  main.cpp
app/ReflectiveSticker/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui  main.cpp  test.json
app/ReflectiveStickerDemo/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  main.cpp
app/ReflectiveStickerLib/: CMakeLists.txt  EasyMVSWarpper.cpp  EasyMVSWarpper.h
app/VideoInputandSaveTest/: CMakeLists.txt  SavetestNode.cpp  SavetestNode.h  main.cpp
app/VocDBGenerator/: CMakeLists.txt  main.cpp
core/: CMakeLists.txt
core/CameraModule/: CMakeLists.txt  CVHikCamera.cpp  CVHikCamera.h  DualPhotographer.cpp  DualPhotographer.h  HikVisionCamera.cpp  HikVisionCamera.h  ImageReaderCamera.cpp  ImageReaderCamera.h  MemImgReaderCamera.cpp  MemImgReaderCamera.h  Photographer.cpp  Photographer.h
core/DenseReconstruction/: CMakeLists.txt  DenseOptimizer.cpp  DenseOptimizer.h  DenseReconstructor.cpp  DenseReconstructor.h  DualFrameReconstructor.cpp  DualFrameReconstructor.h  OptimalFrameFinder.cpp  OptimalFrameFinder.h
core/DenseReconstruction/ADCensus/: ADCWrapper.cpp  ADCWrapper.h  adcensus_util.cpp  adcensus_util.h  cost_computor.h  cross_aggregator.cpp  cross_aggregator.h  multistep_refiner.cpp  multistep_refiner.h  scanline_optimizer.h
core/DenseReconstruction/ADSensus/: ADCensusStereo.cpp  ADCensusStereo.h  adcensus_types.h  cost_computor.cpp  scanline_optimizer.cpp
core/DenseReconstruction/CensusSemiGlobalMatching/: CensusSGMWrapper.cpp  CensusSGMWrapper.h  SemiGlobalMatching.cpp  SemiGlobalMatching.h  sgm_types.h  sgm_util.cpp  sgm_util.h
core/DenseReconstruction/PatchMatchStereo/: PMSWrapper.cpp  PMSWrapper.h  PatchMatchStereo.cpp  PatchMatchStereo.h  cost_computor.hpp  pms_propagation.cpp  pms_propagation.h  pms_types.h  pms_util.cpp  pms_util.h
core/FeatureExtraction/: CMakeLists.txt  FSift128.cpp  FSift128.h  FeatureExtractor.cpp  FeatureExtractor.h  FeatureMatcher.cpp  FeatureMatcher.h  ReflectiveStickerExtractor.cpp  ReflectiveStickerExtractor.h  ReflectiveStickerMatcher.cpp  ReflectiveStickerMatcher.h  VocTreeMatcher.cpp  VocTreeMatcher.h
core/PoseReconstruction/: CMakeLists.txt  PinholePoseReconstructor.cpp  PinholePoseReconstructor.h  PoseReconstructor.cpp  PoseReconstructor.h  ReflectiveReconstructor.cpp  ReflectiveReconstructor.h
core/PostFilter/: CMakeLists.txt
core/common/: CMakeLists.txt  CameraObject.cpp  CameraObject.h  DataFlowObject.cpp  DataFlowObject.h  DenseMapObject.cpp  DenseMapObject.h  FrameObject.cpp  FrameObject.h  GlobalMapObject.cpp  GlobalMapObject.h  JsonSaver.hpp  MVSConfig.cpp  MVSConfig.h  MVSObject.cpp  MVSObject.h  MapPointObject.cpp  MapPointObject.h  WorkFlowObject.cpp  WorkFlowObject.h
doc/: CMakeLists.txt  ClassChart.vsdx  ClassDefinitionDraft.md  DataFlow.vsdx  Doxyfile.in  Pipeline.md  Pipeline.vsdx  introduction.md  stylesheet.css  格林公式积分图计算.vsdx  稠密重建.vsdx
include/common/: MVSObject.h
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_17.js  all_18.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  functions_0.js  functions_1.js  functions_10.js  functions_2.js  functions_3.js  functions_4.js  (+35 more)
src/: CMakeLists.txt
src/CameraModule/: CMakeLists.txt  Photographer.h
src/DenseReconstruction/: CMakeLists.txt
src/FeatureExtraction/: CMakeLists.txt
src/common/: CMakeLists.txt  CameraObject.cpp  CameraObject.h  DataFlowObject.cpp  DataFlowObject.h  FrameObject.h  MVSConfig.h  MVSObject.cpp  MVSObject.h  PoseObject.h  WorkFlowObject.h
visualization/: CMakeLists.txt  QPointCloudViewer.cpp  ScrollScale.cpp
